changed cp date

--- a/upcoming/_posts/2023-04-23-ferrata.md
+++ b/upcoming/_posts/2023-04-23-ferrata.md
@@ -17,5 +17,5 @@ After Arriving in Monte Carasso, we will take a cable car (students: 10 CHF, adu
 **When:** Sunday, April 23rd, 2023 <br>
 **Let us know by:** Sunday, April 16th, 2023 <br>
 **Meeting point:**  9:33, bus stop Monte Carasso/Urénn-Funivia<br>
-**Hike:**   <br>
+**Hike:** Only little walking time, but ca. 3h climbing, muscles will be sore at the end<br>
 **Organiser:** Marco Barandun
